# AI-Quant-Platform

./: .env.example  .gitignore  ARCHITECTURE.md  Makefile  README.md  ROADMAP.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline_schemas_and_universe_seed.py
backend/app/: __init__.py  config.py  db.py  logging.py  main.py  tasks.py  worker.py
backend/app/data/: __init__.py  cache.py  ingestion.py  models.py  normalize.py  provider.py
backend/app/data/providers/: __init__.py  yfinance_provider.py
backend/app/models/: __init__.py  market_data.py  reference.py
backend/quant/: __init__.py  backtest.py  fill_model.py  metrics.py  orders.py  portfolio.py  strategy.py  types.py
backend/tests/: conftest.py  test_api_health.py  test_backtest.py  test_celery_topology.py  test_config.py  test_data_layer.py  test_fill_model.py  test_logging.py  test_metrics.py  test_orders.py  test_portfolio.py  test_strategy.py  test_types.py
docs/adr/: ADR-0001-hexagonal-core.md  ADR-0002-postgres-timescale.md  ADR-0003-celery-redis.md  ADR-0004-data-driven-universe.md  ADR-0005-broker-abstraction.md  ADR-0006-risk-enforcement.md  ADR-0007-strategy-execution-symmetry.md  ADR-0008-structured-logging.md  ADR-0009-typed-configuration.md  ADR-0010-cloud-portability.md  ADR-0011-realistic-backtests.md  ADR-0012-schema-per-context.md  README.md
