[project]
name = "quant-platform-backend"
version = "0.1.0"
description = "Institutional AI Quant Research & Trading Platform — backend"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Quant Platform Engineering" }]
license = { text = "Proprietary" }

# Runtime dependencies are intentionally minimal in Phase 1. Heavy quant/ML
# libraries are added in the phase that owns them (per ROADMAP.md) to keep
# the dependency surface honest and builds fast.
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "structlog>=24.1",
    "celery>=5.3",
    "redis>=5.0",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.9",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "types-redis>=4.6",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ---------------- Ruff ----------------
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "C4",            # comprehensions
    "PL",            # pylint subset
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "PLR2004",  # magic numbers fine in tests
    "PLC0415",  # deferred imports are intentional: must run after monkeypatch
    "S101",     # assert is the point in tests
]
"app/logging.py" = ["PLW0603"]  # module-level "configured once" flag is intentional

# ---------------- Mypy ----------------
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
exclude = ["alembic/versions/"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------- Pytest ----------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
markers = [
    "unit: pure-domain tests, no infrastructure",
    "integration: tests that exercise adapters/infra",
]

[tool.coverage.run]
source = ["app"]
omit = ["app/alembic/*"]
